sass/partials/_foundation.scss
/* ... */
@media screen and (min-width: 791px) and (max-width: 990px) {}
@media screen and (min-width: 601px) and (max-width: 790px) {
  #cx-base-temp {
    .base {
      
      .row {
        flex-flow: row wrap;
        .box {
          @include flex(1 0 100%);

          &-half {
            @include flex(2 2 100%);
          }

          &-full {
            @include flex(1 1 100%);
          }
        }
      }
    }
  }
}
@media screen and (min-width: 300px) and (max-width: 600px) {
  body {
    padding: 0;
  }

  #cx-base-temp {
    max-width: 100%;
    min-width: 300px;

    .menu-btn {
      visibility: visible;
      opacity: 1;
    }
    
    .base {
      // @include flex-direction(column);
      display: block !important;
      height: auto;
      min-height: 100px;
      
      .profile {
        @include flex(none);
        min-height: 100px;
        height: auto;
        display: block;

        .menu {
          //height: 60px;
          z-index: 50;

          

          // svg {
          //   visibility: visible;
          //   opacity: 1;
          //   width: 160px;
          //   height: auto;
          //   padding: 18px 20px;

          //   .cx {
          //     fill: $purple;
          //   }

          //   .insure {
          //     fill: $white;
          //   }
          // }
        }
      }

      main {
        @include flex(none);
        min-height: 100px;
        height: auto;
        display: block;
      }
      
      .row {
        flex-flow: column wrap;
        .box {
          @include flex(1 0 100%);
        }
      }
    }

    nav {
      position: fixed;
      top: 0;
      bottom: 0;
      left: -800px;
      background-color: $white;
      z-index: 30;
      overflow-y: scroll;
      min-width: 300px;
      width: 100%;
      height: 100%;  

      &.mobile {
        left: 0;
      }

      ul {

        li {
          //padding: 15px 10px;
          border-bottom: 1px solid $base;
          margin: 0;
          background-color: $white;

          a {
            width: 100%;
          }
        }
      }
    }
  }

  .card-info {
    display: none;
  }

  .stats {
    padding: 20px !important;
    height: 190px;

    li {
      &.stat {
        h3 {
          font-size: 4em;
        }
      }
    }
  }

  .workflow {
    padding: 0;
    margin: 0;
    list-style: none;
    @include flex-box;
    flex-flow: row wrap;

    li {
      @include flex(1 0 100%);
      padding: 20px;
      margin-right: 0;
      margin-bottom: 20px;

      &:after {
        left: 45%;
        right: 45%;
        top: initial;
        bottom: -37px;
        margin: auto;
        color: $red;
        transform: rotate(90deg);
      }
    }
  }

  .stats-listing {
    li {
      @include flex(1 0 45%);
      border: none;
    }
  }

  .tabs {
    width: 100%;
    flex-flow: row wrap;
  }
  .tab {
    @include flex(1 1 50%);
    margin-bottom: 1em !important;
  }

  .summary-container {
    max-width: 100%;

    .icon {
      @include flex(1 0 100%);
    }

    .copy {
      @include flex(1 0 100%);
      padding: 10px;
    }
  }
}

